# AF-Trade-Offer-Calculator

./: .replit  README.md  algorithms.py  app.py  explanation.py  investment_calculator.py  main.py  models.py  modify_logo.py  pyproject.toml  replit.nix  utils.py
